fix: clicking items behind overlay

--- a/next/components/Navbar/NavBar.module.scss
+++ b/next/components/Navbar/NavBar.module.scss
@@ -74,6 +74,7 @@
         display: flex;
         gap: 0.5em;
         align-items: center;
+        z-index: 1000;
         svg {
           height: 16px;
           width: 16px;
